--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
   </head>
   <body>
+    <input id="num1" type="number" />
+    <input id="num2" type="number" />
+    <button class="btn" id="sumBtn">SUM</button>
+    <button class="btn" id="subBtn">SUB</button>
+    <button class="btn" id="divBtn">DIV</button>
+    <button class="btn" id="mulBtn">MUL</button>
+    <button class="btn" id="modBtn">MOD</button>
+    <p>output here: <strong id="output"></strong></p>
+    <button id="clearBtn">CLEAR</button>
     <script src="script.js"></script>
   </body>
 </html>
