--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button class="btn" id="mulBtn">MUL</button>
     <button class="btn" id="modBtn">MOD</button>
     <p>output here: <strong id="output"></strong></p>
-    <button id="clearBtn">CLEAR</button>
+    <button class="btn" id="clearBtn">CLEAR</button>
     <script src="script.js"></script>
   </body>
 </html>
